--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
     "react-world-flags": "^1.6.0",
     "tailwind-merge": "^3.2.0",
