--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-apexcharts": "^1.7.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-world-flags": "^1.6.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
